# yolo13-reading

./: .gitignore  .gitmodules  AGENTS.md  README.md  pyproject.toml
context/: README.md
context/design/: README.md
context/hints/: README.md
context/instructions/: README.md  make-paper-reading-note.md  template-paper-reading-note.md
context/logs/: README.md
context/plans/: README.md
context/refcode/: README.md
context/roles/: README.md
context/summaries/: README.md
context/tasks/: README.md
context/tasks/features/: README.md
context/tasks/fixes/: README.md
context/tasks/refactor/: README.md
context/tasks/tests/: README.md
context/tools/: README.md
notes/: example-note.md
notes/YOLOv13/: main-note.md
paper-soruce/yolo13/: 00README.json  a_cite.bib  a_main.bbl  a_main.tex  abbreviation.sty
paper-soruce/yolo13/sections/: 1_abstract.tex  2_introduction.tex  3_related_work.tex  4_methodology.tex  5_experiment.tex  6_conclusion.tex
paper-soruce/yolo13/sections/figs/: fig1.tex  fig3-pipeline.tex  fig4-hyperace.tex  fig5-dsblock.tex  fig6-box.tex  fig7-edge.tex
paper-soruce/yolo13/sections/tables/: coco_compare.tex  distribution.tex  dsblocks.tex  epoch.tex  latency.tex  num_edge.tex  voc_comp.tex
tmp/: convert_pdf_to_png.py
