[project]
authors = [{name = "igamenovoer", email = "igamenovoer@xx.com"}]
dependencies = []
name = "yolo13-reading"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["win-64"]

[tool.pixi.pypi-dependencies]
yolo13_reading = { path = ".", editable = true }

[tool.pixi.feature.dev.pypi-dependencies]
torch = "*"
torchvision = "*"
torchaudio = "*"

[tool.pixi.feature.dev.pypi-options]
extra-index-urls = ["https://download.pytorch.org/whl/cu126"]

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = ">=3.13.7,<3.14"

[tool.pixi.environments]
dev = { features = ["dev"], solve-group = "default" }
