[project]
authors = [{name = "igamenovoer", email = "igamenovoer@xx.com"}]
name = "yolo13-reading"
requires-python = ">= 3.11"
version = "0.1.0"
dependencies = ["imageio>=2.37.0,<3"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["win-64"]

[tool.pixi.pypi-dependencies]
yolo13_reading = { path = ".", editable = true }

[tool.pixi.feature.dev.pypi-dependencies]
torch = "*"
torchvision = "*"
torchaudio = "*"
ruff = "*"
mypy = "*"
pytest = "*"
pymupdf = "*"

[tool.pixi.feature.dev.pypi-options]
extra-index-urls = ["https://download.pytorch.org/whl/cu126"]

[tool.pixi.tasks]
convert-figs = "python tmp/convert_pdf_to_png.py notes/YOLOv13/figures/framework.pdf notes/YOLOv13/figures/framework.png 220"

[tool.pixi.dependencies]
python = ">=3.13.7,<3.14"

[tool.pixi.environments]
dev = { features = ["dev"], solve-group = "default" }
yolo13 = { features = ["yolo13"], solve-group = "default" }

[tool.pixi.feature.yolo13.pypi-dependencies]
# YOLOv13 local reference (Ultralytics)
ultralytics = { path = "context/refcode/yolov13", editable = true }
# GPU-enabled PyTorch stack (CUDA 12.6)
torch = "*"
torchvision = "*"

[tool.pixi.feature.yolo13.pypi-options]
extra-index-urls = ["https://download.pytorch.org/whl/cu126"]

[dependency-groups]
dev = [ "attrs>=25.3.0,<26", "scipy>=1.16.2,<2", "matplotlib>=3.10.6,<4", "ipykernel>=6.30.1,<7", "supervision>=0.26.1,<0.27"]
